--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="gamesContainer"></div>
     <div class="footer">
       <a style="font-weight: 700">a site by
-      </a><a style="font-weight: 700" class="link" href="https://www.sites.google.com/CompositeDriveGames">WyattDM & NitroGames</a>
+      </a><a style="font-weight: 700" class="link" href="https://www.sites.google.com/view/CompositeDriveGames">WyattDM & NitroGames</a>
     </div>
   </body>
 </html>
